Consertando a referência ao diretório das imagens

--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -22,7 +22,7 @@ html, body
     color: $custom_gray
 
 #header
-    background: url("../../images/bg-desktop-light.jpg")
+    background: url("./images/bg-desktop-light.jpg")
     background-repeat: no-repeat
     background-size: cover contain
     height: 240px
