--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap')
+$font_josefins: 'Josefin Sans', sans-serif
+
 *
     margin: 0
     padding: 0
     -webkit-box-sizing: border-box
     -moz-box-sizing: border-box
     box-sizing: border-box
+    font-family: $font_josefins
 
 /* === COLORS === */
 $white: #fff
@@ -14,21 +18,32 @@ html, body
     width: 100vw
     height: 100%
     position: relative
-    overflow-x: hidden
+    overflow: hidden
+    background-color: $white
 
 .container
     width: 100%
     height: 100vh
     color: $custom_gray
 
+.box
+    max-width: 600px
+    margin: 0 auto
+
 #header
-    background: url("./images/bg-desktop-light.jpg")
+    background: url("../../images/bg-desktop-light.jpg")
     background-repeat: no-repeat
-    background-size: cover contain
+    background-size: cover
     height: 240px
     width: 100%
     color: $white
-    z-index: 1
+
+.title-area
+    display: flex
+    justify-content: space-between
+    align-items: center
+    height: 50%
+    padding: 40px 20px
 
 a:link
     text-decoration: none
@@ -41,50 +56,83 @@ a:link
 #main
     background-color: $white
     height: 100%
-    height: 368px
-    z-index: 2
-
-.box
-    max-width: 600px
-    margin: 0 auto
-
-.title-area
-    display: flex
-    justify-content: space-between
-    align-items: center
-    height: 50%
-    padding: 40px 20px
+    position: relative
+    top: -5px
+    // height: 368px
+    // border: 1px solid yellow
 
 .list-area
     position: relative
     top: -110px
     padding: 0 5px
 
-.list-area tr td
-    width: 600px
-    background-color: $white
-    border-radius: 10px
-    box-shadow: 5px 4px 9px 2px rgba(204,204,204,0.89)
-
-.list-area tr td input
+.list-area ul li input
     display: inline-block
-    padding: 10px
+    padding: 5px
     font-size: 18px
-    width: 600px
-    max-width: 600px
+    color: $custom_gray
+    width: 100%
+    max-width: 100%
     border: none
 
-footer
+input:focus
+    border: 0 none
+    box-shadow: 0 0 0 0   
+    outline: 0
+
+input::placeholder
+    color: $custom_gray
+    font-size: 18px
+
+form
+    width: 100%
+    padding: 0
+
+ul
+    list-style: none
+
+li
+    width: 100%
+    background-color: $white
+    color: $custom_gray
+    border-radius: 2px
+    box-shadow: 2px 2px 7px 2px rgba(204,204,204,0.89)
+    margin-top: 15px
+    padding: 5px
+
+#todo-add
+    display: grid
+    grid-template-columns: 7fr 1fr
+
+#button-add
+    display: flex
+    justify-content: center
+    align-items: center
+    border: none
+    background-color: rgba(0, 0, 0, .2)
+
+#button-add:hover
+    background-color: rgba(0, 0, 0, .28)
+
+#footer
     width: 100%
     height: 80px
-    background: $dark
-    position: absolute
+    background-color: $white
+    position: fixed
     bottom: 0
     display: flex
     justify-content: center
     align-items: center
-    z-index: 1
 
 h1
     letter-spacing: 5px
-    font-size: 35px
+    font-size: 40px
+
+
+
+// .list-area tr td
+//     width: 600px
+//     background-color: $white
+//     border-radius: 10px
+//     box-shadow: 5px 4px 9px 2px rgba(204,204,204,0.89)
+
