--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ a:link {
   padding: 0 5px;
 }
 
-.list-area ul li input {
+.list-area div span input {
   display: inline-block;
   padding: 5px;
   font-size: 18px;
@@ -89,34 +89,37 @@ input::placeholder {
   font-size: 18px;
 }
 
-form {
-  width: 100%;
-  padding: 0;
-}
-
-ul {
-  list-style: none;
-}
-
-li {
+span {
   width: 100%;
   background-color: #fff;
   color: #4b4949;
-  border-radius: 2px;
   box-shadow: 2px 2px 7px 2px rgba(204, 204, 204, 0.89);
   margin-top: 0px;
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.text-id {
+  color: transparent;
+}
+
+i {
+  width: 15px;
 }
 
 #todo-add {
   display: grid;
   grid-template-columns: 7fr 1fr;
+  padding: 5px;
 }
 
 #button-add {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 5px;
   border: none;
   background-color: rgba(0, 0, 0, 0.2);
 }
@@ -126,7 +129,10 @@ li {
 }
 
 #list {
-  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 9fr;
+  justify-content: center;
+  align-items: center;
 }
 
 #footer {
