--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -100,9 +100,12 @@ i
     width: 15px
 
 #todo-add
+    display: inline-block
+    padding: 5px
+    border-radius: 2.5px
     display: grid
     grid-template-columns: 7fr 1fr
-    padding: 5px
+    margin-bottom: 30px
 
 #button-add
     display: flex
@@ -115,11 +118,39 @@ i
 #button-add:hover
     background-color: rgba(0, 0, 0, .28)
 
+#container-list
+    border-radius: 5px
+
 #list
     display: grid
     grid-template-columns: 1fr 9fr
     justify-content: center
     align-items: center
+    border-radius: 5px
+
+#function-bar
+    display: none
+    grid-template-columns: 2fr 3fr 2fr
+    justify-content: center
+    align-items: center
+    box-shadow: 2px 2px 7px 2px rgba(204,204,204,0.89)
+    border: .2px solid rgba(204,204,204,0.89)
+    border-radius: 5px
+
+#function-bar div
+    display: flex
+    justify-content: center
+    align-items: center
+    padding: 10px
+    background-color: #FFF
+
+#function-bar .link-bar
+    margin-left: 15px
+    color: $custom_gray
+
+#function-bar div:first-child
+    margin-left: 0
+    justify-content: flex-start !important
 
 #footer
     width: 100%
